# sqliteform

./: .gitignore  CMakeLists.txt  README.md  base.db
img/: add.xpm  close.xpm  delete.xpm  first.xpm  home_32.xpm  last.xpm  next.xpm  previous.xpm  quit.xpm  update.xpm
lib/: sqlite3mc_amalgamation.lo  wxsqlite3.lo
src/: GBase.cpp  GBase.h  MainWindow.cpp  MainWindow.h  PanelSqlquery.cpp  PanelSqlquery.h  main.cpp  p1.fbp
